adding security to userController and generating another swagger
